<resources>
    <string name="app_name">Rindex</string>
    <string name="map_key" translatable="false">AIzaSyBPz5uZrk1gORpLT2paqNvNhyndBiKJz10</string>
    <!-- COMMON -->
    <string name="apply">Uygula</string>
    <string name="hint_mail">E-Posta</string>
    <string name="hint_password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="login_failed">Giriş başarısız oldu. Lütfen bilgilerinizi kontrol edip tekrar deneyiniz.</string>
    <string name="not_a_member">Hala üye değil misiniz?</string>
    <string name="register">Kayıt Ol</string>
    <string name="bypass_login">Giriş Yapmadan Devam</string>
    <string name="remind_me">Giriş bilgileriniz kaydedilsin mi?</string>
    <string name="credentials_saved">Bilgiler kaydedildi.</string>
    <string name="save">Kaydet</string>
    <string name="filter">Yerleri Filtrele</string>
    <string name="fragment_home">Akış</string>
    <string name="fragment_history">Geçmiş</string>
    <string name="fragment_my_profile">Profilim</string>
    <string name="fragment_qr">QR Oku</string>
    <string name="travel_book_empty">Seyahat defteriniz boş.</string>
    <string name="already_in_travel_book">Seyahat Defterimden Kaldır</string>
    <string name="delete_account">Hesabımı Sil</string>
    <string name="delete_credentials">Giriş Bilgilerimi Sil</string>
    <string name="listen">Sesli Dinle</string>
    <string name="share">Paylaş</string>
    <string name="province">İl</string>
    <string name="district">İlçe</string>
    <string name="total_post">Toplam Gönderi</string>
    <string name="delete_account_confirmation">Hesabınız Silinecek!</string>
    <string name="sure">Emin misiniz?</string>
    <string name="delete">Sil</string>
    <string name="cancel">İptal</string>
    <string name="login_data_delete">Giriş Yapma Verileriniz Silinecek!</string>
    <string name="no_login_data">Giriş yapma verisi bulunmuyor.</string>
    <string name="nearby_restaurants">Yakın Restoranlar</string>
    <string name="nearby_hotels">Yakın Konaklama Yerleri</string>
    <string name="common_features">Genel Özellikler</string>
    <string name="serve_alcohol">İçki servisi var.</string>
    <string name="has_family_lounge">Aile salonu var.</string>
    <string name="restaurant_features">Restoran Özellikleri</string>
    <string name="hotel_features">Otel Özellikleri</string>
    <string name="pets_allowed">Evcil hayvan girebilir.</string>
    <string name="has_local_food">Yerel yemek servisi var.</string>
    <string name="get_directions">Yol Tarifi Al</string>
    <string name="editors_advice">Editör tavsiye ediyor.</string>
    <string name="best_photo_places">En İyi Fotoğraf Çekim Yerleri</string>
    <string name="has_internet_connection">İnternet bağlantısı mevcut.</string>
    <string name="has_virus_precautions">Virüs önlemi var.</string>
    <string name="please_select_filter_args">Filtreyi uygulamak için lütfen il ve ilçe seçiniz.</string>
    <string name="filtered_to">Filtre: </string>
    <string name="create_new_post">Yeni Gönderi Oluştur</string>
    <string name="photo_of_post">Gönderi fotoğrafı seçmek için dokunun.</string>
    <string name="description_for_post">Gönderi Açıklaması</string>
    <string name="click_for_set">Ayarlamak için dokunun.</string>
    <string name="send_post">Gönder</string>
    <string name="preview_post">Önizle</string>
    <string name="last_added">Son Eklenenler</string>
    <string name="no_data">Veri Yok!</string>
    <string name="fragment_travel_book">Seyahat Defterim</string>
    <string name="hide">Gizle</string>
    <string name="add_to_travel_book">Seyahat Defterime Ekle</string>
    <string name="can_not_be_undone">Bu işlem geri alınamaz!</string>
    <string name="invalid_qr_code">Karekod Geçersiz!</string>
    <string name="all">Hepsi</string>
    <string name="enable_tts">Görme engelli modu açılsın mı?</string>
    <string name="character_limit_exceeded">Karakter limit aşıldı!</string>
    <string name="see_more">Devamını görmek için tıklayınız...</string>
    <string name="total_comment_count">Toplam Yorum Sayısı: </string>
    <string name="edit_post">Gönderiyi Düzenle</string>
    <string name="search">Ara</string>
    <string name="biography">Biyografi</string>
    <string name="yes">Evet</string>
    <string name="post_deleted">Gönderi başarıyla silindi.</string>
    <string name="no">Hayır</string>
    <string name="qr_not_valid">Geçerli bir Rindex QR değil.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="your_comment">Yorumunuzu giriniz...</string>
    <string name="title_home">Home</string>
    <string name="change_profile_photo">Profil Fotoğrafını Değiştir</string>
    <string name="change_biography">Biyografiyi Değiştir</string>
    <string name="change_name_surname">İsim Soyisim Değiştir</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="changed_successfully_rr">Başarıyla değiştirildi. Yeniden başlattığınızda değişecek.</string>
    <string name="report">Rapor Et</string>
    <string name="add_answer">Cevap Ekle</string>
    <string name="answers">Cevaplar</string>
    <string name="location_guesser">Şurada mısınız? </string>
    <string name="click_for_details">Detaylar için buraya tıklayınız...</string>
    <string name="consider">Lütfen bu tespiti değerlendirin.</string>
    <string name="edit">Düzenle</string>
    <string name="question_added">Sorunuz eklendi.</string>
    <string name="detection">Rindex şurada olduğunuzu algıladı: </string>
    <string name="live_chat">Canlı Sohbet</string>
    <string name="click_to_edit_questions">Sorularınızı düzenlemek için tıklayınız. Toplam: </string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="options">Seçenekler</string>
    <string name="faq">Sıkça Sorulan Sorular</string>
    <string name="enter_question">Sorunuz</string>
    <string name="ask">Sor</string>
    <string name="not_rated">Yeterli Değerlendirme Yok</string>
    <string name="rindex_location_service">Rindex Konum Servisi</string>
    <string name="running">Çalışıyor...</string>
    <string name="star">Yıldızla</string>
    <string name="starred">Yıldızlanmış</string>
    <string name="unstar">Geri Al</string>
    <string name="please_enter_body">Lütfen gövde giriniz!</string>
    <string name="body_of_question">Sorunun gövdesini eklemek için tıklayınız.</string>
    <string name="body_of_answer">Cevabın gövdesini eklemek için tıklayınız.</string>
    <string name="body_of_question_1">Soru Gövdesi</string>
    <string name="body_of_answer_1">Cevap Gövdesi</string>
    <string name="add_question">Yeni Soru</string>
    <string name="reply">Cevapla</string>
    <string name="see_replies">Cevapları Gör</string>
    <string name="click_for_faq">Sıkça sorulan soruları ve cevaplarını görmek için tıklayınız.</string>
    <string name="questions">Sorular</string>
    <string name="comments">Yorumlar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_btn">Filtrele</string>
    <string name="province_district_filter">Filtre</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="tab_text_1">Bilgi</string>
    <string name="tab_text_2">Sosyal</string>
    <string name="tab_text_3">Yakınlarda</string>
    <string name="posts">Gönderiler</string>
    <string name="your_posts">Gönderileriniz</string>
    <string name="click_to_edit_posts">Gönderileri düzenlemek için tıklayınız.</string>
</resources>