<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                style="@style/IntentHeader"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/options">

            </TextView>


        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/edit"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0.4dp"
            app:strokeColor="#ccc"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="-1dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/edit">

                </TextView>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/delete"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0.4dp"
            app:strokeColor="#ccc"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="-1dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/delete">

                </TextView>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>