<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationGuesserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/rindex_location_service"
                app:titleTextAppearance="@style/IntentHeader"
                app:titleTextColor="@color/black"
                android:background="@color/white"
                style="@style/Widget.MaterialComponents.Toolbar.Custom"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="80px"
                    android:scaleType="centerCrop"
                    android:foreground="@drawable/profile_photo_view"
                    android:src="@drawable/rindexlogo"
                    android:layout_height="80px">

                </ImageView>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Username"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                </TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="#dddddd">

            </View>

            <TextView
                android:id="@+id/detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15dp"
                android:text="">

            </TextView>

        </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <ListView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:divider="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:layout_marginHorizontal="5dp"></ListView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/consider">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:text="@string/yes">

            </Button>

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#ba4c4c"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:text="@string/no">

            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>